# testrepo2

./: .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: bump_version.yml  main.yml  release-drafter.yml  release.yml
testrepo2/: hello.py
tests/: test_foo.py
